--- a/16-fast-react-pizza/index.html
+++ b/16-fast-react-pizza/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <bodyi class="bg-stone-100 text-stone-700">
+  <body class="bg-stone-100 text-stone-700">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </bodyi>
+  </body>
 </html>
